--- a/Frontend/url-shortener-react/.env
+++ b/Frontend/url-shortener-react/.env
@@ -1,2 +1,2 @@
-VITE_BACKEND_URL=http://localhost:8080
+VITE_BACKEND_URL=https://url-shortener-app-0erk.onrender.com
 VITE_REACT_SUBDOMAIN=http://url.localhost:5173
